style: optimize code style